--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -15,6 +15,7 @@
         "build": "pnpm clean && pnpm build.production"
     },
     "dependencies": {
+        "@plurid/plurid-themes": "0.0.0-2",
         "body-parser": "^1.20.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
