--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -60,6 +60,7 @@
         "styled-components": "^5.3.6"
     },
     "devDependencies": {
+        "@plurid/deon": "0.0.0-10",
         "@redux-devtools/extension": "^3.2.3",
         "@rollup/plugin-commonjs": "^23.0.2",
         "@rollup/plugin-json": "^5.0.1",
